--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -73,7 +73,7 @@
                 <input type="password" class="form-control" placeholder="비밀번호" required="" id="txtPassword" />
             </div>
             <button type="submit" class="btn btn-primary block full-width m-b" onclick="javascript:fnLogin();">로그인</button>
-            <button type="submit" class="btn btn-primary block full-width m-b" onclick="javascript:fnLogin();" style="background-color: #A0C0D7; border : 1px solid #A0C0D7 ">회원가입</button>
+            <button type="button" class="btn btn-primary block full-width m-b" onclick="location.href='signin.html';" style="background-color: #A0C0D7; border : 1px solid #A0C0D7 ">회원가입</button>
             <p class="m-t"> <small>sse & yc &copy; 2017</small> </p>
         </div>
     </div>
