--- a/src/main/webapp/signin.html
+++ b/src/main/webapp/signin.html
@@ -57,6 +57,7 @@
         <div>
                 <h1 class="logo-name">Hi+</h1>
         </div>
+        <h3>Welcome to 1 Team+</h3>
     </div>
     <table class="hqttable">
       <tr class="hqttr">
@@ -106,6 +107,7 @@
     <br>
     <div style="margin: 0 auto; width: 350px;">
       <button type="submit" class="signbtn" onclick="javascript:fnLogin();">회원가입</button>
+      <p class="m-t" style="text-align: center;"> <small>sse & yc &copy; 2017</small> </p>
     </div>
 </body>
 </html>
