메인페이지 제작 시작

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>    
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <title>HQTech 1Team | Login</title>
+    <title>HQTech AV Team | Login</title>
 
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
@@ -65,7 +65,7 @@
             <div>
                 <h1 class="logo-name">Hi+</h1>
             </div>
-            <h3>Welcome to 1 Team+</h3>
+            <h3>AV Assurance Board+</h3>
             <div class="form-group">
                 <input type="email" class="form-control" placeholder="아이디" required="" id="txtLoginId" value="admin@zikgong.co.kr"  />
             </div>
@@ -73,7 +73,7 @@
                 <input type="password" class="form-control" placeholder="비밀번호" required="" id="txtPassword" />
             </div>
             <button type="submit" class="btn btn-primary block full-width m-b" onclick="javascript:fnLogin();">로그인</button>
-            <button type="button" class="btn btn-primary block full-width m-b" onclick="location.href='signin.html';" style="background-color: #A0C0D7; border : 1px solid #A0C0D7 ">회원가입</button>
+            <button type="button" class="btn btn-primary block full-width m-b" onclick="location.href='signup.html';" style="background-color: #A0C0D7; border : 1px solid #A0C0D7 ">회원가입</button>
             <p class="m-t"> <small>sse & yc &copy; 2017</small> </p>
         </div>
     </div>
