--- a/src/main/webapp/noticeBoard.html
+++ b/src/main/webapp/noticeBoard.html
@@ -9,55 +9,60 @@
   </head>
   <body>
 
-    <!-- Wrapper -->
-      <div id="wrapper">
+  <div style="float: right; width: 1000px; height: 1000px;">
+  <table>
+    <tr>
+      <td>1</td>
+    </tr>
+  </table>
+  </div>
 
 
-        <!-- Sidebar -->
-          <div id="sidebar">
-            <div class="inner">
+<!-- Sidebar -->
+  <div id="sidebar">
+    <div class="inner">
 
-              <!-- Search -->
-                <section id="search" class="alt">
-                  <form method="post" action="#">
-                    <input type="text" name="query" id="query" placeholder="Search" />
-                  </form>
-                </section>
+      <!-- Search -->
+        <section id="search" class="alt">
+          <form method="post" action="#">
+            <input type="text" name="query" id="query" placeholder="Search" />
+          </form>
+        </section>
 
-              <!-- Menu -->
-                <nav id="menu">
-                  <header class="major">
-                    <h2>Menu</h2>
-                  </header>
-                  <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li>
-                      <span class="opener">공지사항</span>
-                      <ul>
-                        <li><a href="#">팀 내부 공지사항</a></li>
-                        <li><a href="#">업무 관련 공지사항</a></li>
-                      </ul>
-                    </li>
-                    <li><a href="#">시장 이슈</a></li>
-                    <li>
-                      <span class="opener">제품별 사양 및 이슈</span>
-                      <ul>
-                        <li><a href="#">SAT</a></li>
-                        <li><a href="#">ROOM SPEAKER</a></li>
-                        <li><a href="#">MULTIROOM APP</a></li>
-                        <li><a href="#">BAND APP</a></li>
-                        <li><a href="#">BD/HES</a></li>
-                        <li><a href="#">PVR</a></li>
-                        <li><a href="#">SAMSUNG CONNECT</a></li>
-                        <li><a href="#">CONVERGENCE</a></li>
-                      </ul>
-                    </li>
-                    <li><a href="#">업무 프로세스</a></li>
-                    <li><a href="#">제품 관련 용어 정리</a></li>
-                    <li><a href="#">PC 도움방</a></li>
-                    <li><a href="#">업무 관련 사이트</a></li>
-                  </ul>
-                </nav>
+      <!-- Menu -->
+        <nav id="menu">
+          <header class="major">
+            <h2>Menu</h2>
+          </header>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li>
+              <span class="opener">공지사항</span>
+              <ul>
+                <li><a href="#">팀 내부 공지사항</a></li>
+                <li><a href="#">업무 관련 공지사항</a></li>
+              </ul>
+            </li>
+            <li><a href="#">시장 이슈</a></li>
+            <li>
+              <span class="opener">제품별 사양 및 이슈</span>
+              <ul>
+                <li><a href="#">SAT</a></li>
+                <li><a href="#">ROOM SPEAKER</a></li>
+                <li><a href="#">MULTIROOM APP</a></li>
+                <li><a href="#">BAND APP</a></li>
+                <li><a href="#">BD/HES</a></li>
+                <li><a href="#">PVR</a></li>
+                <li><a href="#">SAMSUNG CONNECT</a></li>
+                <li><a href="#">CONVERGENCE</a></li>
+              </ul>
+            </li>
+            <li><a href="#">업무 프로세스</a></li>
+            <li><a href="#">제품 관련 용어 정리</a></li>
+            <li><a href="#">PC 도움방</a></li>
+            <li><a href="#">업무 관련 사이트</a></li>
+          </ul>
+        </nav>
 
 <!-- 제품별 사양 및 이슈 -->
 <!--       SAT (제목 카테고리 - 공통 15 16 17 선택 가능) -->
@@ -73,29 +78,29 @@
 <!--        카테고리 제품 별 선택 가능하게끔 -->
 
 <!-- 업무 프로세스 -->
-       
+
 <!-- 제품 관련 용어 정리 -->
 
 <!-- PC 도움방 -->
 
 <!-- 업무 관련사이트 (링크 되게끔) -->
 
-              <!-- Footer -->
-                <footer id="footer">
-                  <p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-                </footer>
+      <!-- Footer -->
+        <footer id="footer">
+          <p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+        </footer>
 
-            </div>
-          </div>
+    </div>
+  </div>
 
-      </div>
 
-    <!-- Scripts -->
-      <script src="assets/js/jquery.min.js"></script>
-      <script src="assets/js/skel.min.js"></script>
-      <script src="assets/js/util.js"></script>
-      <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-      <script src="assets/js/main.js"></script>
+
+<!-- Scripts -->
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/skel.min.js"></script>
+<script src="assets/js/util.js"></script>
+<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+<script src="assets/js/main.js"></script>
 
   </body>
 </html>
