--- a/src/main/webapp/signup.html
+++ b/src/main/webapp/signup.html
@@ -4,18 +4,13 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>    
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <title>HQTech 1Team | Login</title>
+    <title>HQTech AV Team | SingUp</title>
 
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
-<!--     <link href="../Contents/Font-awesome/css/font-awesome.css" rel="stylesheet"/> -->
     <link href="lib/css/animate.css" rel="stylesheet"/>
     <link href="lib/css/style.css" rel="stylesheet"/>
-<!--     <script src="../Contents/Scripts/jquery.blockUI.js"></script> -->
-<!--     <script src="../Contents/Scripts/jquery-ui-1.10.4.min.js"></script> -->
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-<!--     <script src="../Contents/Scripts/Common.js"></script> -->
-<!--     <script src="../Contents/Scripts/Huma.Framework.V1.Script.js"></script> -->
     
 <style>
 .hqttable {
@@ -40,7 +35,7 @@
 }
 
 .signbtn {
-  background-color: #A0C0D7; 
+  background-color: #A3D8C4; 
   margin: 0 auto; 
   width: 350px; 
   border: 0; 
@@ -53,11 +48,11 @@
 </head>
 <body class="gray-bg">
     
-     <div class="middle-box text-center loginscreen animated fadeInDown" style="padding-top: 0; padding-bottom: 30px;">        
+     <div class="middle-box text-center loginscreen animated fadeInDown" style="padding-top: 0; padding-bottom: 0px;">        
         <div>
                 <h1 class="logo-name">Hi+</h1>
         </div>
-        <h3>Welcome to 1 Team+</h3>
+        <h3>Welcome to AV Team+</h3>
     </div>
     <table class="hqttable">
       <tr class="hqttr">
