--- a/src/main/webapp/Mainpage.html
+++ b/src/main/webapp/Mainpage.html
@@ -33,7 +33,7 @@
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #A0C0D7;
+    background-color: #F0F0F0;
     min-width: 20%;
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -51,7 +51,7 @@
 .dropdown-content2 {
     display: none;
     position: absolute;
-    background-color: #A0C0D7;
+    background-color: #F0F0F0;
     min-width: 20%;
     overflow: auto;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -67,10 +67,10 @@
   color: #FF8000; 
 }
 #myDropdown a:hover {
-  color: white;
+  color: #FF8000;
 }
 #myDropdown2 a:hover {
-  color: white;
+  color: #FF8000;
 }
 </style>
 </head>
@@ -98,7 +98,7 @@
     
     <tr class="sidetr">
       <td id="noticemenu" class="sidetd" style="cursor: pointer;" onClick="myFunction()">
-      공지사항
+      공지사항 ▼
       </td>
     </tr>
     <tr id="myDropdown" class="dropdown-content" style="width: 20%;">
@@ -113,7 +113,7 @@
     </tr>
     
     <tr class="sidetr">
-      <td id="noticemenu2" class="sidetd" style="cursor: pointer;" onClick="myFunction2()">제품별 사양 및 이슈</td>
+      <td id="noticemenu2" class="sidetd" style="cursor: pointer;" onClick="myFunction2()">제품별 사양 및 이슈 ▼</td>
     </tr>
     <tr id="myDropdown2" class="dropdown-content2" style="width: 20%;">
       <td style="width: 100%;">
