메인페이지 공지게시판 생성

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -72,7 +72,7 @@
             <div class="form-group">
                 <input type="password" class="form-control" placeholder="비밀번호" required="" id="txtPassword" />
             </div>
-            <button type="submit" class="btn btn-primary block full-width m-b" onclick="javascript:fnLogin();">로그인</button>
+            <button type="submit" class="btn btn-primary block full-width m-b" onclick="location.href='Mainpage.html'<!-- javascript:fnLogin() -->;">로그인</button>
             <button type="button" class="btn btn-primary block full-width m-b" onclick="location.href='signup.html';" style="background-color: #A0C0D7; border : 1px solid #A0C0D7 ">회원가입</button>
             <p class="m-t"> <small>sse & yc &copy; 2017</small> </p>
         </div>
