[spring-security] 진행중

--- a/src/main/webapp/user/login.html
+++ b/src/main/webapp/user/login.html
@@ -66,14 +66,16 @@
                 <h1 class="logo-name">Hi+</h1>
             </div>
             <h3>AV Assurance Board+</h3>
+            <form id="login-form">
             <div class="form-group">
-                <input type="email" class="form-control" placeholder="아이디" required="" id="txtLoginId" value="admin@zikgong.co.kr"  />
+                <input type="id" class="form-control" placeholder="아이디" required="" id="txtLoginId" value="admin@zikgong.co.kr"  />
             </div>
             <div class="form-group">
                 <input type="password" class="form-control" placeholder="비밀번호" required="" id="txtPassword" />
             </div>
             <button type="submit" class="btn btn-primary block full-width m-b" onclick="location.href='Mainpage.html'<!-- javascript:fnLogin() -->;">로그인</button>
             <button type="button" class="btn btn-primary block full-width m-b" onclick="location.href='signup.html';" style="background-color: #A0C0D7; border : 1px solid #A0C0D7 ">회원가입</button>
+            </form>
             <p class="m-t"> <small>sse & yc &copy; 2017</small> </p>
         </div>
     </div>
