--- a/src/main/webapp/user/login.html
+++ b/src/main/webapp/user/login.html
@@ -6,14 +6,14 @@
 
     <title>HQTech AV Team | Login</title>
 
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <script src="../node_modules/jquery/dist/jquery.min.js"></script>
+    <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
 <!--     <link href="../Contents/Font-awesome/css/font-awesome.css" rel="stylesheet"/> -->
-    <link href="lib/css/animate.css" rel="stylesheet"/>
-    <link href="lib/css/style.css" rel="stylesheet"/>
+    <link href="../lib/css/animate.css" rel="stylesheet"/>
+    <link href="../lib/css/style.css" rel="stylesheet"/>
 <!--     <script src="../Contents/Scripts/jquery.blockUI.js"></script> -->
 <!--     <script src="../Contents/Scripts/jquery-ui-1.10.4.min.js"></script> -->
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 <!--     <script src="../Contents/Scripts/Common.js"></script> -->
 <!--     <script src="../Contents/Scripts/Huma.Framework.V1.Script.js"></script> -->
     
