--- a/src/main/webapp/noticeBoardReg.html
+++ b/src/main/webapp/noticeBoardReg.html
@@ -101,20 +101,54 @@ tinyMCE.init({
     // General options
     mode : "textareas", // 위지웍 에디터로 사용할 HTML 요소는 textarea로 지정한다.
     theme : "modern", // TinyMCE는 여러가지 테마를 지원해준다. 그중 advanced 테마를 사용
-    plugins : "noneditable,autosave,fullpage",
+    plugins : "noneditable,autosave,fullpage,help,image,hr,link,contextmenu,textcolor,textpattern,save,preview",
+    toolbar: "forecolor backcolor",
     skin : "lightgray",
     language: "ko_KR", // 사용할 언어는 한국어로 지정
     height : "350",
     width : "830",
-    // Theme options
-    // theme_advanced_buttons1~3의 변수를 변경함으로써 메뉴를 배치할 수 있다.
-    //theme_advanced_buttons1 : "code, |, undo, redo, |, cut, copy, paste, pastetext, pasteword, |, search, replace, |, removeformat, cleanup",
-    //theme_advanced_buttons2 : "bold, italic, underline, strikethrough, |, sub, sup, |, bullist, numlist, |, justifyleft, justifycenter, justifyright, justifyfull, |, outdent, indent, |, blockquote, |, link, unlink, image, media, |, forecolor, backcolor",
-    //theme_advanced_buttons3 : "formatselect,fontselect,fontsizeselect,|,tablecontrols,preview,|,fullscreen,help",
-    //theme_advanced_toolbar_location : "top", // 툴바는 상단에 위치
-    //theme_advanced_toolbar_align : "left",
-    //theme_advanced_statusbar_location : "bottom",
-    //theme_advanced_resizing : false // 위지웍 에디터를 인위적으로 변경 불가능. true로 설정할 경우 마우스로 크기를 변경할 수 있다.
+    textcolor_map: [
+                    "000000", "Black",
+                    "993300", "Burnt orange",
+                    "333300", "Dark olive",
+                    "003300", "Dark green",
+                    "003366", "Dark azure",
+                    "000080", "Navy Blue",
+                    "333399", "Indigo",
+                    "333333", "Very dark gray",
+                    "800000", "Maroon",
+                    "FF6600", "Orange",
+                    "808000", "Olive",
+                    "008000", "Green",
+                    "008080", "Teal",
+                    "0000FF", "Blue",
+                    "666699", "Grayish blue",
+                    "808080", "Gray",
+                    "FF0000", "Red",
+                    "FF9900", "Amber",
+                    "99CC00", "Yellow green",
+                    "339966", "Sea green",
+                    "33CCCC", "Turquoise",
+                    "3366FF", "Royal blue",
+                    "800080", "Purple",
+                    "999999", "Medium gray",
+                    "FF00FF", "Magenta",
+                    "FFCC00", "Gold",
+                    "FFFF00", "Yellow",
+                    "00FF00", "Lime",
+                    "00FFFF", "Aqua",
+                    "00CCFF", "Sky blue",
+                    "993366", "Red violet",
+                    "FFFFFF", "White",
+                    "FF99CC", "Pink",
+                    "FFCC99", "Peach",
+                    "FFFF99", "Light yellow",
+                    "CCFFCC", "Pale green",
+                    "CCFFFF", "Pale cyan",
+                    "99CCFF", "Light sky blue",
+                    "CC99FF", "Plum"
+                  ]
+
 });
 </script>
 </head>
