--- a/src/main/webapp/noticeBoard.html
+++ b/src/main/webapp/noticeBoard.html
@@ -197,7 +197,7 @@
     
     <div style="width: 100%;">
       <div style="width:800px; margin-left: 30%;">
-        <input type="button" style="width:70px; height:30px;" value="글쓰기"/>
+        <input type="button" style="width:70px; height:30px;" value="글쓰기" onclick="location.href='noticeBoardReg.html'" />
         <input type="submit" value="검색" style="float: right; height: 30px; width: 50px;" />
         <input type="text" style="float: right; width: 250px;height: 30px;"/>
       </div>
