[Common] js 공통함수 추가

--- a/src/main/webapp/user/signup.html
+++ b/src/main/webapp/user/signup.html
@@ -11,6 +11,7 @@
     <link href="../lib/css/animate.css" rel="stylesheet"/>
     <link href="../lib/css/style.css" rel="stylesheet"/>
     <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="../lib/js/common.js"></script>
     <script src="../lib/js/user.js"></script>
     
 <style>
@@ -48,7 +49,6 @@
 </style>
 </head>
 <body class="gray-bg">
-    
      <div class="middle-box text-center loginscreen animated fadeInDown" style="padding-top: 0; padding-bottom: 0px;">        
         <div>
                 <h1 class="logo-name">Hi+</h1>
