--- a/src/main/webapp/user/signup.html
+++ b/src/main/webapp/user/signup.html
@@ -55,6 +55,8 @@
         </div>
         <h3>Welcome to AV Team+</h3>
     </div>
+    
+<!--     <form id="user_data" action="#" name="signup_form" method="post"> -->
     <table class="hqttable">
       <tr class="hqttr">
         <td class="hqttd1">아이디</td>
@@ -102,8 +104,9 @@
     <br>
     <br>
     <div style="margin: 0 auto; width: 350px;">
-      <button type="submit" class="signbtn" onclick="javascript:fnLogin();">회원가입</button>
+      <input type="submit" class="signbtn" onclick="javascript:fnLogin();" value="회원가입">
       <p class="m-t" style="text-align: center;"> <small>sse & yc &copy; 2017</small> </p>
     </div>
+<!--     </form> -->
 </body>
 </html>
