--- a/src/main/webapp/user/signup.html
+++ b/src/main/webapp/user/signup.html
@@ -104,7 +104,7 @@
     <br>
     <br>
     <div style="margin: 0 auto; width: 350px;">
-      <input type="submit" class="signbtn" onclick="javascript:fnLogin();" value="회원가입">
+      <input type="submit" class="signbtn" onclick="javascript:fnSignUp();" value="회원가입">
       <p class="m-t" style="text-align: center;"> <small>sse & yc &copy; 2017</small> </p>
     </div>
 <!--     </form> -->
