[Common] 폴더 구조 변경

--- a/src/main/webapp/board/noticeBoard.html
+++ b/src/main/webapp/board/noticeBoard.html
@@ -6,13 +6,13 @@
 
     <title>MainPage</title>
 
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="lib/js/common.js"></script>
-    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="lib/css/animate.css" rel="stylesheet"/>
-    <link href="lib/css/style.css" rel="stylesheet"/>
-    <link href="lib/css/board/notice_board.css" rel="stylesheet"/>
+    <script src="../node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="../lib/js/common.js"></script>
+    <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="../lib/css/animate.css" rel="stylesheet"/>
+    <link href="../lib/css/style.css" rel="stylesheet"/>
+    <link href="../lib/css/board/notice_board.css" rel="stylesheet"/>
     
 </head>
 <body class="gray-bg">
