--- a/src/main/webapp/board/noticeBoardReg.html
+++ b/src/main/webapp/board/noticeBoardReg.html
@@ -6,15 +6,15 @@
 
     <title>MainPage</title>
 
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="lib/js/common.js"></script>
-    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="lib/css/animate.css" rel="stylesheet"/>
-    <link href="lib/css/style.css" rel="stylesheet"/>
-    <link href="lib/css/board/board_reg.css" rel="stylesheet"/>
-	<script type="text/javascript" src="tinymce/js/tinymce/tinymce.min.js"></script>
-	<script src="lib/js/board/board_reg.js"></script>
+    <script src="../node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="../lib/js/common.js"></script>
+    <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="../lib/css/animate.css" rel="stylesheet"/>
+    <link href="../lib/css/style.css" rel="stylesheet"/>
+    <link href="../lib/css/board/board_reg.css" rel="stylesheet"/>
+	<script type="text/javascript" src="../tinymce/js/tinymce/tinymce.min.js"></script>
+	<script src="../lib/js/board/board_reg.js"></script>
 	
 </head>
 
