--- a/src/main/webapp/common_html/nav_bar.html
+++ b/src/main/webapp/common_html/nav_bar.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="EUC-KR">
 <title>Insert title here</title>
-<link href="lib/css/nav/nav.css" rel="stylesheet"/>
-<script src="lib/js/nav/nav_bar.js"></script>
+<link href="../lib/css/nav/nav.css" rel="stylesheet"/>
+<script src="../lib/js/nav/nav_bar.js"></script>
 </head>
 <body>
   <table class="sideTable">
@@ -17,7 +17,7 @@
     </tr>
     <tr class="sidetr">
       <td class="sidetd" style="background-color: #F0F0F0; font-size: large;">
-      <img src="home.png" width="25xp;" style="padding-bottom: 5px;">
+      <img src="../home.png" width="25xp;" style="padding-bottom: 5px;">
       <a href="Mainpage.html">Home</a>
       </td>
     </tr>
@@ -29,8 +29,8 @@
     </tr>
     <tr id="myDropdown" class="dropdown-content" style="width: 200px;">
       <td style="width: 200px;">
-      <a href="#" style="padding-left: 50px;">> 팀 내부 공지사항</a>
-      <a href="#" style="padding-left: 50px;">> 업무 관련 공지사항</a>
+      <a href="board/noticeBoard.html?first=0" style="padding-left: 50px;">> 팀 내부 공지사항</a>
+      <a href="board/noticeBoard.html?first=1" style="padding-left: 50px;">> 업무 관련 공지사항</a>
       </td>
     </tr>
     
