[Login] Login 및 페이지 접근 제한 적용

--- a/src/main/webapp/common_html/nav_bar.html
+++ b/src/main/webapp/common_html/nav_bar.html
@@ -9,7 +9,10 @@
 <body>
   <table class="sideTable">
     <tr class="sidetr" style="border-bottom: 1px solid #E6E6E6">
-      <td class="sidetd"> <span>AV팀</span> <span>양찬</span> <span>주임</span>님 환영합니다!　　<span>Logout</span>
+      <div class="user_info">
+        <td class="sidetd"> <span id="user_department" class="nav_user"></span> <span id="user_name" class="nav_user"></span> <span id="user_position" class="nav_user"></span>님 환영합니다!
+      </div>
+      <div class="logout_btn"><a onclick="fnLogout()">Logout</a></div>
       </td>
     </tr>
     <tr class="sidetr">
