--- a/src/main/webapp/main/Mainpage.html
+++ b/src/main/webapp/main/Mainpage.html
@@ -6,14 +6,14 @@
 
     <title>MainPage</title>
 
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-	<script src="lib/js/common.js"></script>    
-	<script src="lib/js/main.js"></script>    
-    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="lib/css/animate.css" rel="stylesheet"/>
-    <link href="lib/css/style.css" rel="stylesheet"/>
-    <link href="lib/css/main.css" rel="stylesheet"/>
+    <script src="../node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+	<script src="../lib/js/common.js"></script>    
+	<script src="../lib/js/main.js"></script>    
+    <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="../lib/css/animate.css" rel="stylesheet"/>
+    <link href="../lib/css/style.css" rel="stylesheet"/>
+    <link href="../lib/css/main.css" rel="stylesheet"/>
 </head>
 <body class="gray-bg">
 
