--- a/src/main/webapp/board/noticeBoardReg.html
+++ b/src/main/webapp/board/noticeBoardReg.html
@@ -17,7 +17,7 @@
 <script type="text/javascript"
 	src="../tinymce/js/tinymce/tinymce.min.js"></script>
 <script src="../lib/js/board/board_reg.js"></script>
-<script src="../lib/js/jquery.chained.min.js"></script>
+<!-- <script src="../lib/js/jquery.chained.min.js"></script> -->
 
 </head>
 
@@ -58,9 +58,9 @@
 			</tr>
 			<tr>
 				<td>작성자</td>
-				<td style="width: 25%;">양희영(yan***)</td>
+				<td style="width: 25%;" class="user_name"></td>
 				<td style="width: 20%;">작성일</td>
-				<td>2016-06-18</td>
+				<td class="current_date"></td>
 				<td>
 					<select id="category_list" style="width: 85%; height: 70%; color: black;">
 						<option>--카테고리 선택--</option>
