--- a/src/main/webapp/common_html/nav_bar.html
+++ b/src/main/webapp/common_html/nav_bar.html
@@ -15,9 +15,9 @@
       <div class="logout_btn"><a onclick="fnLogout()">Logout</a></div>
       </td>
     </tr>
-    <tr class="sidetr">
-      <td class="sidetd"></td>
-    </tr>
+<!--     <tr class="sidetr"> -->
+<!--       <td class="sidetd"></td> -->
+<!--     </tr> -->
     <tr class="sidetr">
       <td class="sidetd" style="background-color: #F0F0F0; font-size: large;">
       <img src="../home.png" width="25xp;" style="padding-bottom: 5px;">
