[UI & Main] UI(Navigation) 변경 및 메인 페이지 공지 관련 ajax 추가 (todo: 페이징, 댓글 카운트, 메인(product_issue ajax), 각페이지에 new navigation으로 변경

--- a/src/main/webapp/board/noticeBoardDetail.html
+++ b/src/main/webapp/board/noticeBoardDetail.html
@@ -32,7 +32,7 @@
     <div style="width: 100%;">
     
     <div class="board_no" style="display:hidden;"></div>
-      <table id="teamNoticeBoard">
+      <table id="teamNoticeBoard" class="table-striped">
         <!-- 게시판 상세페이지 -->
         <tr style="background-color: #A0C0D7; color: white; font-weight: bold;">
           <td style="width: 15%;">제목</td>
