--- a/src/main/webapp/board/noticeBoardReg.html
+++ b/src/main/webapp/board/noticeBoardReg.html
@@ -17,7 +17,7 @@
 <script type="text/javascript"
 	src="../tinymce/js/tinymce/tinymce.min.js"></script>
 <script src="../lib/js/board/board_reg.js"></script>
-<!-- <script src="../lib/js/jquery.chained.min.js"></script> -->
+<script src="../lib/js/jquery.chained.min.js"></script>
 
 </head>
 
@@ -53,6 +53,11 @@
 						<option value="common_issue">시장이슈</option>
 						<option value="product_issue">제품별 시장 이슈</option>
 						<option value="process">업무프로세스</option>
+						<option value="product_term">제품 관련 용어 정리</option>
+						<option value="no_name">익명 게시판</option>
+						<option value="pc_helper">PC 도움방</option>
+						<option value="about_work_site">업무 관련 사이트</option>
+						<option value="my_place">내공간</option>
 					</select>
 				</td>
 			</tr>
