[Board & Common] 게시물 페이징 처리 추가 & 잔버그 수정

--- a/src/main/webapp/board/noticeBoardDetail.html
+++ b/src/main/webapp/board/noticeBoardDetail.html
@@ -55,7 +55,7 @@ $(".nav li").click(function(){
 
 	<div class='wrapper'>
 		<div class='sidebar'>
-			<div class='title'><a href="../main/Mainpage2.html">HQTECH</a></div>
+			<div class='title'><a href="../main/Mainpage.html">HQTECH</a></div>
 			<ul class='nav'>
 				<li class="notice_dropdown"><a href="../board/noticeBoard.html?type=notice">공지사항</a>
 					<ul class="notice_content">
@@ -80,6 +80,7 @@ $(".nav li").click(function(){
 				<li><a href="../board/noticeBoard.html?type=process">업무 프로세스</a></li>
 				<li><a href="../board/noticeBoard.html?type=product_term">제품 관련 용어 정리</a></li>
 				<li><a href="../board/noticeBoard.html?type=no_name">익명 게시판</a></li>
+				<li><a href="../board/noticeBoard.html?type=free">자유 게시판</a></li>
 				<li><a href="../board/noticeBoard.html?type=pc_helper">PC 도움방</a></li>
 				<li><a href="../board/noticeBoard.html?type=about_work_site">업무 관련 사이트</a></li>
 				<li><a href="../board/noticeBoard.html?type=my_place">내공간</a></li>
