--- a/src/main/webapp/main/Mainpage.html
+++ b/src/main/webapp/main/Mainpage.html
@@ -53,7 +53,7 @@ $(".nav li").click(function(){
 
 	<div class='wrapper'>
 		<div class='sidebar'>
-			<div class='title'><a href="../main/Mainpage2.html">HQTECH</a></div>
+			<div class='title'><a href="../main/Mainpage.html">HQTECH</a></div>
 			<ul class='nav'>
 				<li class="notice_dropdown"><a href="../board/noticeBoard.html?type=notice">공지사항</a>
 					<ul class="notice_content">
@@ -78,6 +78,7 @@ $(".nav li").click(function(){
 				<li><a href="../board/noticeBoard.html?type=process">업무 프로세스</a></li>
 				<li><a href="../board/noticeBoard.html?type=product_term">제품 관련 용어 정리</a></li>
 				<li><a href="../board/noticeBoard.html?type=no_name">익명 게시판</a></li>
+				<li><a href="../board/noticeBoard.html?type=free">자유 게시판</a></li>
 				<li><a href="../board/noticeBoard.html?type=pc_helper">PC 도움방</a></li>
 				<li><a href="../board/noticeBoard.html?type=about_work_site">업무 관련 사이트</a></li>
 				<li><a href="../board/noticeBoard.html?type=my_place">내공간</a></li>
@@ -138,7 +139,7 @@ $(".nav li").click(function(){
     		
 			<!-- 제품별 사양 및 이슈 게시판 -->
 		  <div id="container">
-		  <div style="font-weight: bold;">*제품별 사양 및 이슈</div>
+		  <div style="font-weight: bold; margin-bottom: 10px;">*제품별 사양 및 이슈</div>
 		    <ul class="tabs">
 		        <li class="active" rel="tab1" data-value="sat">SAT</li>
 		        <li rel="tab2">ROOM SPEAKER</li>
