[Common] navigation href 변경 및 index 페이지 접근시 리다이렉트

--- a/src/main/webapp/board/noticeBoard.html
+++ b/src/main/webapp/board/noticeBoard.html
@@ -59,31 +59,31 @@ $(".nav li").click(function(){
 			<ul class='nav'>
 				<li class="notice_dropdown"><a href="../board/noticeBoard.html?type=notice">공지사항</a>
 					<ul class="notice_content">
-						<li><a href="../board/noticeBoard.html?cat=team_notice">팀 내 공지사항</a></li>
-						<li><a href="../board/noticeBoard.html?cat=work_notice">업무 관련 공지사항</a></li>
+						<li><a href="../board/noticeBoard.html?cat=team_notice&pageNo=1">팀 내 공지사항</a></li>
+						<li><a href="../board/noticeBoard.html?cat=work_notice&pageNo=1">업무 관련 공지사항</a></li>
 					</ul>
 				</li>
-				<li><a href="../board/noticeBoard.html?type=common_issue">시장이슈</a></li>
+				<li><a href="../board/noticeBoard.html?type=common_issue&pageNo=1">시장이슈</a></li>
 				<li class="issue_dropdown"><a href="">제품별 사양 및 이슈</a>
 					<ul class="issue_content">
-						<li><a href="../board/noticeBoard.html?cat=sat">SAT</a></li>
-						<li><a href="../board/noticeBoard.html?cat=room_speaker">ROOM SPEAKER</a></li>
-						<li><a href="../board/noticeBoard.html?cat=multiroom">MULTIROOM APP</a></li>
-						<li><a href="../board/noticeBoard.html?cat=band">BAND APP</a></li>
-						<li><a href="../board/noticeBoard.html?cat=bd_hes">BD/HES</a></li>
-						<li><a href="../board/noticeBoard.html?cat=pvr">PVR</a></li>
-						<li><a href="../board/noticeBoard.html?cat=ss_connect">SAMSUNG CONNECT</a></li>
-						<li><a href="../board/noticeBoard.html?cat=convergence">CONVERGENCE</a></li>
+						<li><a href="../board/noticeBoard.html?cat=sat&pageNo=1">SAT</a></li>
+						<li><a href="../board/noticeBoard.html?cat=room_speaker&pageNo=1">ROOM SPEAKER</a></li>
+						<li><a href="../board/noticeBoard.html?cat=multiroom&pageNo=1">MULTIROOM APP</a></li>
+						<li><a href="../board/noticeBoard.html?cat=band&pageNo=1">BAND APP</a></li>
+						<li><a href="../board/noticeBoard.html?cat=bd_hes&pageNo=1">BD/HES</a></li>
+						<li><a href="../board/noticeBoard.html?cat=pvr&pageNo=1">PVR</a></li>
+						<li><a href="../board/noticeBoard.html?cat=ss_connect&pageNo=1">SAMSUNG CONNECT</a></li>
+						<li><a href="../board/noticeBoard.html?cat=convergence&pageNo=1">CONVERGENCE</a></li>
 						
 					</ul>
 				</li>
-				<li><a href="../board/noticeBoard.html?type=process">업무 프로세스</a></li>
-				<li><a href="../board/noticeBoard.html?type=product_term">제품 관련 용어 정리</a></li>
-				<li><a href="../board/noticeBoard.html?type=no_name">익명 게시판</a></li>
-				<li><a href="../board/noticeBoard.html?type=free">자유 게시판</a></li>
-				<li><a href="../board/noticeBoard.html?type=pc_helper">PC 도움방</a></li>
-				<li><a href="../board/noticeBoard.html?type=about_work_site">업무 관련 사이트</a></li>
-				<li><a href="../board/noticeBoard.html?type=my_place">내공간</a></li>
+				<li><a href="../board/noticeBoard.html?type=process&pageNo=1">업무 프로세스</a></li>
+				<li><a href="../board/noticeBoard.html?type=product_term&pageNo=1">제품 관련 용어 정리</a></li>
+				<li><a href="../board/noticeBoard.html?type=no_name&pageNo=1">익명 게시판</a></li>
+				<li><a href="../board/noticeBoard.html?type=free&pageNo=1">자유 게시판</a></li>
+				<li><a href="../board/noticeBoard.html?type=pc_helper&pageNo=1">PC 도움방</a></li>
+				<li><a href="../board/noticeBoard.html?type=about_work_site&pageNo=1">업무 관련 사이트</a></li>
+				<li><a href="../board/noticeBoard.html?type=my_place&pageNo=1">내공간</a></li>
 			</ul>
 		</div>
 		<div class='content isOpen'>
