[Detail] 내용 긴경우 관련하여 CSS 수정

--- a/src/main/webapp/board/noticeBoardDetail.html
+++ b/src/main/webapp/board/noticeBoardDetail.html
@@ -57,7 +57,7 @@ $(".nav li").click(function(){
 		<div class='sidebar'>
 			<div class='title'><a href="../main/Mainpage.html">HQTECH</a></div>
 			<ul class='nav'>
-				<li class="notice_dropdown"><a href="../board/noticeBoard.html?type=notice">공지사항</a>
+				<li class="notice_dropdown"><a href="../board/noticeBoard.html?type=notice&pageNo=1">공지사항</a>
 					<ul class="notice_content">
 						<li><a href="../board/noticeBoard.html?cat=team_notice&pageNo=1">팀 내 공지사항</a></li>
 						<li><a href="../board/noticeBoard.html?cat=work_notice&pageNo=1">업무 관련 공지사항</a></li>
@@ -74,6 +74,7 @@ $(".nav li").click(function(){
 						<li><a href="../board/noticeBoard.html?cat=pvr&pageNo=1">PVR</a></li>
 						<li><a href="../board/noticeBoard.html?cat=ss_connect&pageNo=1">SAMSUNG CONNECT</a></li>
 						<li><a href="../board/noticeBoard.html?cat=convergence&pageNo=1">CONVERGENCE</a></li>
+						<li><a href="../board/noticeBoard.html?cat=alexa&pageNo=1">ALEXA</a></li>
 						
 					</ul>
 				</li>
