--- a/src/main/webapp/board/noticeBoardReg.html
+++ b/src/main/webapp/board/noticeBoardReg.html
@@ -31,7 +31,7 @@
     		</div>
     		
     		<div class="required_wrap">
-      		<input type="checkbox" class="required_box" value="required"> 필독
+      		<input type="checkbox" id = "required_box" class="required_box" value="required"> 필독
 			</div>
 			
     		<table id="teamNoticeBoard">
