[게시판] 필독 게시물인 경우 백그라운드 칼라 변경, 메인 프로덕트리스트에 게시물 없을 경우 없다고 표시 추가

--- a/src/main/webapp/board/noticeBoard.html
+++ b/src/main/webapp/board/noticeBoard.html
@@ -55,7 +55,7 @@
 		        <script id="board_list_template" type="text/x-handlebars-template">
 
 				{{#data.require}}
-					<tr style="background-color: #F0F0F0;">
+					<tr style="background: blanchedalmond;">
             		<td data-no="{{boardNo}}">--</td>
             		<td><a href="noticeBoardDetail.html?no={{boardNo}}"><span style="color:red;">[필독]</span>{{title}}</a><span style="color:#FF8000; ">[0]</span></td>
             		<td>{{userName}}</td>
