--- a/src/main/webapp/board/noticeBoardDetail.html
+++ b/src/main/webapp/board/noticeBoardDetail.html
@@ -51,6 +51,12 @@
 			          <td colspan="5" style="text-align: left; padding: 30px 15px 30px 15px; background: floralwhite;" class="board_content">
 			          </td>
 			        </tr>
+			        <tr class="btn_area">
+						<td colspan="5">
+							<input type="submit" class="btn btn-danger delete_btn" onclick="javascript: ajaxDeleteBoard();" value="삭제"> 
+							<input type="submit" class="btn btn-info modify_btn" onclick="" value="수정">
+						</td>
+					</tr>
 			        
 			        <!-- 댓글 부분 -->
 			        <tbody class="tmp">
