--- a/src/main/webapp/board/noticeBoard.html
+++ b/src/main/webapp/board/noticeBoard.html
@@ -33,6 +33,7 @@
 		<div class='content isOpen'>
 			<div class="middle-box text-center loginscreen animated fadeInDown" style="padding-top: 0; padding-bottom: 0px; width: 100%;">        
       			<h1 class="logo-name" style="font-size: 150px;">AV+</h1>
+      			<h3 class="type_name"></h3>
     		</div>
     		
     		<div class="content_area">
