--- a/src/main/webapp/board/noticeBoardDetail.html
+++ b/src/main/webapp/board/noticeBoardDetail.html
@@ -54,7 +54,7 @@
 			        <tr class="btn_area">
 						<td colspan="5">
 							<input type="submit" class="btn btn-danger delete_btn" onclick="javascript: ajaxDeleteBoard();" value="삭제"> 
-							<input type="submit" class="btn btn-info modify_btn" onclick="" value="수정">
+							<input type="submit" class="btn btn-info modify_btn" onclick="javascript: movoToUpdate();" value="수정">
 						</td>
 					</tr>
 			        
